# omega-digital-audio-workshop

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_audio_playback.txt  CMakeLists_audio_test.txt  CMakeLists_backup.txt  CMakeLists_full.txt  CMakeLists_midi_test.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_MANAGEMENT.md  PRIVACY.md  README.md  SECURITY.md  cmake_toolchain.cmake
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: integrity-check.yml  security-scan.yml
build_integration/: CMakeLists.txt
build_integration/OmegaDAW_IntegrationTest.dir/Release/OmegaDAW.A0D2629D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_integration/include/: AdvancedEffects.h  Arrangement.h  AudioEngine.h  AudioProcessing.h  BuiltInPlugins.h  Clip.h  DAWApplication.h  FileIO.h  Filter.h  MIDIDevice.h  MIDIFile.h  MIDISequencer.h  Mixer.h  MixerChannel.h  PluginHost.h  Project.h  Router.h  Track.h  Transport.h  UIMixer.h  UIWindow.h
build_integration/src/: AdvancedEffects.cpp  AudioEngine.cpp  AudioProcessing.cpp  DAWApplication.cpp  DAWGUI.cpp  Effects.cpp  MIDIDevice.cpp  MIDIMessage.cpp  MIDISynthesizer.cpp  MixerChannel.cpp  Oscillator.cpp  Plugin.cpp  PluginHost.cpp  Project.cpp  Sequencer.cpp  Transport.cpp  UITimeline.cpp  UITransport.cpp  main.cpp  main_integration_test.cpp  main_synth_unittest.cpp
build_integration/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_integration/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
docs/: AUDIO_PLAYBACK_TEST_REPORT.md  BUILD_SECURITY.md  FULL_GUI_INTEGRATION_STATUS.md  INTEGRATION.md  INTEGRATION_TEST_REPORT.md  MIDI_SYSTEM.md  PLUGIN_SYSTEM.md  QUICK_REFERENCE.md  README.md  SECURITY_MEASURES.md  api-reference.md  architecture.md  getting-started.md  mixer-routing.md
include/: Arrangement.h  AudioBuffer.h  AudioEngine.h  AudioFilePlayer.h  DAWApplication.h  DAWGUI.h  Effects.h  Filter.h  MIDIDevice.h  MIDIFile.h  MIDIMessage.h  MIDISequencer.h  MIDISynthesizer.h  Mixer.h  MixerChannel.h  Oscillator.h  Plugin.h  Project.h  Router.h  Sequencer.h  Track.h  Transport.h  UIControls.h  UITimeline.h  UITransport.h  UIWindow.h
scripts/: backup_dependencies.ps1  build.ps1  restore_dependencies.ps1  setup_dependencies.ps1  verify_integrity.ps1  watch_dependencies.ps1
src/: Arrangement.cpp  AudioBuffer.cpp  AudioEngine.cpp  AudioFilePlayer.cpp  AudioProcessing.cpp  BuiltInPlugins.cpp  Clip.cpp  DAWApplication.cpp  DAWGUI.cpp  Effects.cpp  FileIO.cpp  Filter.cpp  MIDIDevice.cpp  MIDIFile.cpp  MIDIMessage.cpp  MIDISequencer.cpp  Mixer.cpp  MixerChannel.cpp  Oscillator.cpp  Plugin.cpp  Project.cpp  Router.cpp  Sequencer.cpp  Track.cpp  Transport.cpp  UIControls.cpp  UIMixer.cpp  UIWindow.cpp  main.cpp  main_audio_playback_test.cpp  main_audio_test.cpp  main_full.cpp  main_gui.cpp  main_midi_test.cpp  main_simple_gui.cpp  main_simple_midi_test.cpp
